Fix img to include link. Fix home.erb img spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -125,9 +125,16 @@ margin: 0px 0 0 -400px;
 .ship-fix {
   position: relative;
   bottom: 15px;
+
 }
 
 .shop-btn-top {
   position: relative;
   left: 20px;
 }
+
+.img-polaroid {
+  height: 240px;
+  width: 175px;
+}
+
